pluginManager.withPlugin('java') {
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(16)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.forkOptions.jvmArgs << '--add-opens' << 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
        options.encoding = 'UTF-8'
    }
}
